--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/framework-bundle": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/framework-bundle": "~2.3|~3.0|~4.0|~5.0|^6.0|^7.0",
         "simple-bus/symfony-bridge": "^6.0"
     },
     "autoload": {
